RESOLVED FIXED316376
[Site Isolation] Fix dom/xsl/lockdown-mode/XSLT-disabled.html
https://bugs.webkit.org/show_bug.cgi?id=316376
Summary [Site Isolation] Fix dom/xsl/lockdown-mode/XSLT-disabled.html
Sihui Liu
Reported 2026-06-04 21:52:34 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-06-04 22:02:00 PDT
Sihui Liu
Comment 2 2026-06-04 22:13:05 PDT
EWS
Comment 3 2026-06-05 09:37:07 PDT
Committed 314639@main (9346d69d3090): <https://commits.webkit.org/314639@main> Reviewed commits have been landed. Closing PR #66521 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.