[Site Isolation] Fix dom/xsl/lockdown-mode/XSLT-disabled.html https://bugs.webkit.org/show_bug.cgi?id=316376 rdar://178787824

Reviewed by Per Arne Vollan.

The test crashes on SI bot for failing debug assertion in WebPage::frameTreeSyncDataChangedInAnotherProcess() -- web
process thinks the message should not be sent because SI disabled, but UI process actually thinks SI is enabled. This
cause is web process adjusts settings to turn off unstable features in lockdown mode. To fix this, this patch ensures
WebPage::adjustSettingsForLockdownMode won't overwrite SiteIsolationEnabled value. This is safe because it is an
internal flag that cannot be accidentally turned on by regular users.

An alternative would be to have the UI process apply lockdown mode adjustments before sending the preferences store to
the web process, but that would require mutating the shared WebPreferences object, or introducing a separate
effective-preferences concept, which is a significantly larger change.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::adjustSettingsForLockdownMode):

Canonical link: https://commits.webkit.org/314639@main